fixed portfolio desc on small screen

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -138,6 +138,8 @@
                         font-size: 1.7rem;
                         overflow: hidden;
 
+                    
+
 
                         .tec {
                             overflow: hidden;
@@ -146,6 +148,10 @@
                             display: flex;
                             flex-direction: row;
                             gap: 5px;
+
+                            @include mobile {
+                                display: none;
+                                }
 
                             p {
                                 padding: 3px;
